--- a/htmlcss/assets/layout-hw-1.css
+++ b/htmlcss/assets/layout-hw-1.css
@@ -3,8 +3,6 @@
     width: 800px;
     height: 200px;
     background-color: antiquewhite;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .left-contents {
@@ -28,17 +26,31 @@
 
 .profile {
     width: 100%;
-    height: 25%;
+    height: 20%;
     background-color: aqua;
 }
 
 .img-profile {
     width: 30px;
     height: 30px;
-    margin: 10px;
-    float: left;
+    margin: 5px 10px;
+    display: inline-block;
     border-radius: 20px;
     
+}
+
+.authour {
+    height: 60%;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 5px;
+}
+
+.time-write {
+    height: 30%;
+    display: inline-block;
+    vertical-align: bottom;
+    margin-bottom: 5px;
 }
 
 .footer {
@@ -50,14 +62,16 @@
 
 .title {
     width: 100%;
-    height: 10%;    
+    height: 10%;
+    
     margin: 10px;
     
 }
 
 .body {
     width: 100%;
-    height: 40%;    
+    height: 40%;
+    
     margin: 10px;
     
 }
@@ -65,8 +79,4 @@
 .btn-share {
     float: right;
     margin-right: 10px;
-}
-
-.txt-profile {
-    float: left;
 }
