--- a/htmlcss/assets/layout-hw.css
+++ b/htmlcss/assets/layout-hw.css
@@ -41,6 +41,20 @@
     
 }
 
+.authour {
+    height: 60%;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 5px;
+}
+
+.time-write {
+    height: 30%;
+    display: inline-block;
+    vertical-align: bottom;
+    margin-bottom: 5px;
+}
+
 .footer {
     clear: both;
     background-color: aliceblue;
@@ -50,14 +64,16 @@
 
 .title {
     width: 100%;
-    height: 10%;    
+    height: 10%;
+    
     margin: 10px;
     
 }
 
 .body {
     width: 100%;
-    height: 40%;    
+    height: 40%;
+    
     margin: 10px;
     
 }
